--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,11 +10,9 @@
         android:id="@+id/ApplicationName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="110dp"
         android:layout_marginLeft="110dp"
         android:layout_marginRight="110dp"
-        android:layout_marginStart="110dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:fontFamily="monospace"
         android:text="@string/app_name"
         android:textAlignment="center"
@@ -29,24 +27,19 @@
         android:id="@+id/InputView"
         android:layout_width="0dp"
         android:layout_height="64dp"
-        android:layout_marginEnd="110dp"
-        android:layout_marginLeft="110dp"
-        android:layout_marginRight="110dp"
-        android:layout_marginStart="110dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="@+id/ApplicationName"
+        app:layout_constraintStart_toStartOf="@+id/ApplicationName"
         app:layout_constraintTop_toBottomOf="@+id/ApplicationName"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1" />
 
     <EditText
         android:id="@+id/IPAddressInput"
-        android:layout_width="196dp"
+        android:layout_width="186dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginBottom="4dp"
+        android:layout_marginTop="4dp"
         android:ems="10"
         android:fontFamily="monospace"
         android:hint="@string/IPInputHint"
@@ -54,111 +47,78 @@
         app:layout_constraintBottom_toBottomOf="@+id/InputView"
         app:layout_constraintLeft_toLeftOf="@+id/InputView"
         app:layout_constraintTop_toTopOf="@+id/InputView"
-        app:layout_constraintVertical_bias="1.0"
         tools:layout_constraintLeft_creator="1" />
 
     <TextView
         android:id="@+id/IPAddressNetmaskSplitter"
         android:layout_width="16dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="4dp"
+        android:layout_marginTop="4dp"
         android:text="@string/Slash"
         android:textSize="36sp"
-        app:layout_constraintRight_toLeftOf="@+id/NetmaskInput"
-        android:layout_marginRight="0dp"
+        app:layout_constraintBottom_toBottomOf="@+id/InputView"
         app:layout_constraintLeft_toRightOf="@+id/IPAddressInput"
-        android:layout_marginLeft="0dp"
-        app:layout_constraintTop_toTopOf="@+id/InputView"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/ErrorMassage"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintRight_toLeftOf="@+id/NetmaskInput"
+        app:layout_constraintTop_toTopOf="@+id/InputView" />
 
     <EditText
         android:id="@+id/NetmaskInput"
-        android:layout_width="160dp"
+        android:layout_width="161dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginBottom="4dp"
+        android:layout_marginTop="4dp"
         android:ems="10"
         android:fontFamily="monospace"
         android:hint="@string/mNetmask"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="@+id/InputView"
-        app:layout_constraintRight_toRightOf="@+id/InputView"
+        app:layout_constraintEnd_toEndOf="@+id/InputView"
         app:layout_constraintTop_toTopOf="@+id/InputView"
-        app:layout_constraintVertical_bias="1.0"
         tools:layout_constraintRight_creator="1" />
 
     <TextView
         android:id="@+id/IPCalculatorResult"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/CalculateButton"
+        app:layout_constraintVertical_bias="1.0"
         tools:layout_constraintTop_creator="1" />
-
-    <TextView
-        android:id="@+id/ErrorMassage"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="110dp"
-        android:layout_marginLeft="110dp"
-        android:layout_marginRight="110dp"
-        android:layout_marginStart="110dp"
-        android:fontFamily="monospace"
-        android:textColor="@android:color/holo_red_dark"
-        android:textSize="18sp"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/InputView"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1" />
 
     <Button
         android:id="@+id/CalculateButton"
         android:layout_width="0dp"
         android:layout_height="64dp"
-        android:layout_marginEnd="110dp"
-        android:layout_marginLeft="110dp"
-        android:layout_marginRight="110dp"
-        android:layout_marginStart="110dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:fontFamily="monospace"
         android:onClick="onClickCalculate"
         android:text="@string/Calculate"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ErrorMassage"
+        app:layout_constraintEnd_toEndOf="@+id/InputView"
+        app:layout_constraintStart_toStartOf="@+id/IPAddressInput"
+        app:layout_constraintTop_toBottomOf="@+id/InputView"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1" />
 
     <Button
         android:id="@+id/CalculateBinary"
         android:layout_width="wrap_content"
-        android:layout_height="64dp"
+        android:layout_height="0dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
         android:fontFamily="monospace"
         android:text="@string/Binary"
+        app:layout_constraintBottom_toBottomOf="@+id/CalculateButton"
         app:layout_constraintLeft_toRightOf="@+id/CalculateButton"
-        app:layout_constraintTop_toBottomOf="@+id/ErrorMassage" />
+        app:layout_constraintTop_toTopOf="@+id/CalculateButton" />
 
     <TextView
         android:id="@+id/IPAddressKey"
         android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:fontFamily="monospace"
         android:text="@string/IPAddressKey"
@@ -387,16 +347,11 @@
         android:id="@+id/IPAddressBitString"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="0dp"
-        android:layout_marginEnd="12dp"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="12dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="0dp"
         android:fontFamily="monospace"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@+id/IPAddressValue"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toRightOf="@+id/IPAddressValue"
         app:layout_constraintRight_toRightOf="@+id/IPCalculatorResult"
         app:layout_constraintTop_toTopOf="@+id/IPAddressValue"
@@ -408,16 +363,11 @@
         android:id="@+id/NetmaskBitString"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="0dp"
-        android:layout_marginEnd="12dp"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="12dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="0dp"
         android:fontFamily="monospace"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@+id/NetmaskValue"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toRightOf="@+id/NetmaskValue"
         app:layout_constraintRight_toRightOf="@+id/IPCalculatorResult"
         app:layout_constraintTop_toTopOf="@+id/NetmaskValue"
@@ -429,16 +379,11 @@
         android:id="@+id/WildcardBitString"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="0dp"
-        android:layout_marginEnd="12dp"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="12dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="0dp"
         android:fontFamily="monospace"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@+id/WildcardValue"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toRightOf="@+id/WildcardValue"
         app:layout_constraintRight_toRightOf="@+id/IPCalculatorResult"
         app:layout_constraintTop_toTopOf="@+id/WildcardValue"
@@ -450,16 +395,11 @@
         android:id="@+id/NetworkBitString"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="0dp"
-        android:layout_marginEnd="12dp"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="12dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="0dp"
         android:fontFamily="monospace"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@+id/NetworkValue"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toRightOf="@+id/NetworkValue"
         app:layout_constraintRight_toRightOf="@+id/IPCalculatorResult"
         app:layout_constraintTop_toTopOf="@+id/NetworkValue"
@@ -471,16 +411,11 @@
         android:id="@+id/BroadcastBitString"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="0dp"
-        android:layout_marginEnd="12dp"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="12dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="0dp"
         android:fontFamily="monospace"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@+id/BroadcastValue"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toRightOf="@+id/BroadcastValue"
         app:layout_constraintRight_toRightOf="@+id/IPCalculatorResult"
         app:layout_constraintTop_toTopOf="@+id/BroadcastValue"
@@ -492,16 +427,11 @@
         android:id="@+id/MinHostBitString"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="0dp"
-        android:layout_marginEnd="12dp"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="12dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="0dp"
         android:fontFamily="monospace"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@+id/MinHostValue"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toRightOf="@+id/MinHostValue"
         app:layout_constraintRight_toRightOf="@+id/IPCalculatorResult"
         app:layout_constraintTop_toTopOf="@+id/MinHostValue"
@@ -513,16 +443,11 @@
         android:id="@+id/MaxHostBitString"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="0dp"
-        android:layout_marginEnd="12dp"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="12dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="0dp"
         android:fontFamily="monospace"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@+id/MaxHostValue"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toRightOf="@+id/MaxHostValue"
         app:layout_constraintRight_toRightOf="@+id/IPCalculatorResult"
         app:layout_constraintTop_toTopOf="@+id/MaxHostValue"
@@ -530,29 +455,16 @@
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1" />
 
-    <RadioButton
-        android:id="@+id/IPAddressBinary"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:checked="false"
-        android:duplicateParentState="false"
-        android:text="RadioButton"
-        app:layout_constraintBottom_toTopOf="@+id/IPCalculatorResult"
-        app:layout_constraintStart_toStartOf="@+id/CalculateButton"
-        app:layout_constraintTop_toBottomOf="@+id/CalculateButton"
-        app:layout_constraintVertical_bias="0.0"
-        tools:text="IP Binary input" />
-
-    <RadioButton
-        android:id="@+id/NetmaskBinary"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="RadioButton"
-        app:layout_constraintBottom_toTopOf="@+id/IPCalculatorResult"
-        app:layout_constraintEnd_toEndOf="@+id/CalculateButton"
-        app:layout_constraintTop_toBottomOf="@+id/CalculateButton"
-        app:layout_constraintVertical_bias="0.0"
-        tools:text="Netmask Binary input" />
+    <CheckBox
+        android:id="@+id/BinaryInput"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:text="@string/BinaryInput"
+        app:layout_constraintBottom_toBottomOf="@+id/InputView"
+        app:layout_constraintEnd_toEndOf="@+id/CalculateBinary"
+        app:layout_constraintStart_toEndOf="@+id/NetmaskInput"
+        app:layout_constraintTop_toTopOf="@+id/InputView" />
 
 
 </android.support.constraint.ConstraintLayout>
